<resources>
    <string name="app_name">Timestamp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Software Engineering CS262</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="time_tracker">Timestamp</string>
    <string name="choose_activity">Projects:</string>
    <string name="start_time">Start time!</string>
    <string name="pause_msg">Press the pause icon when you are done</string>
    <string name="reset_button_text">Save/Reset</string>
    <string name="add_project_menu_item">Add/Remove Project</string>
    <string name="manual_time_entry_menu_item">Enter Time</string>
    <string name="manual_time_removal_menu_item">Remove Time</string>
    <string name="dark_theme_menu_item">Dark Theme</string>
    <string name="title_activity_add_project">Add Project</string>
    <string name="new_proj_text_field">Name for new project</string>
    <string name="add_project_button">Add Project</string>
    <string name="remove_project_button">Remove Project</string>
    <string name="title_activity_adding_times">addingTimes</string>
    <string name="title_activity_time_picker">timePicker</string>
    <string name="title_activity_date_picker">datePicker</string>
    <string name="username_label">Username</string>
    <string name="username_edit">Enter Username</string>
    <string name="user_project_label">User\'s Project</string>
    <string name="start_time_label">Select Start Time</string>
    <string name="start_time_button">Select</string>
    <string name="end_time_label">Select End Time</string>
    <string name="end_time_button">Select</string>
    <string name="date_label">Select Date</string>
    <string name="date_button">Select Date</string>
    <string name="save_label">Save</string>
    <string name="fill_all_feilds_error">Must fill in all fields to save a time!</string>
    <string name="view_times">View times per project</string>
    <string name="title_activity_view_times">viewTimes</string>
    <string name="addEmptyProjectError">Can\'t Add An Empty Project</string>
    <string name="removeEmptyProjectError">Can\'t Remove An Empty Project</string>
    <string name="StartAfterEndDateError">Start Date Must Be Before End Date</string>
    <string name="EndBeforeStartDateError">End Date Must Be After Start Date</string>
    <string name="NoTimeError">No time save</string>
    <string name="title_activity_sign_in_page">signInPage</string>
    <string name="enter_your_username">Sign In:</string>
    <string name="username">Username</string>
    <string name="username_error">Must enter a username and a password!</string>
    <string name="title_activity_remove_times">Remove A Time</string>
    <string name="title_activity_on_line_help_text">Online Help Text</string>
    <string name="help_text">Getting Started: \n \n

Welcome to Timestamp! While our application is designed to be simple to use,
you can find instructions on how to use each feature listed below. \n \n

Add New Project: \n \n

To add a new project, start by going to the main menu. The main menu is located
by selecting the button in the upper left hand corner of the home screen.
Once you open the menu, select the add/remove option from the list. Once selected,
a new page will open. Here you can enter the name of your new project in the
space provided, labeled "Name for new project". Once you have inputed a name,
select the ADD PROJECT button to add your project to the list of current projects.
To return to the home screen, select the arrow in the upper left corner of the screen. \n \n

Start Timer: \n \n

To start the timer, press the large play button in the middle of the home-screen. \n \n

Stop Timer: \n \n

To stop the timer, press the large stop button in the middle of the home screen. \n \n

Remove Project: \n \n

To remove an existing project, start by going to the main menu. The main menu is located
by selecting the button in the upper left corner of the home screen.
Once you open the menu, select the "add/remove project" option from the list. Once selected,
a new page will open. Here you can select a project from the drop down menu of current
projects. Once you have selected a project you wish to delete,
select the REMOVE PROJECT button to remove the selected the project from the list of current projects.
To return to the home screen, select the arrow in the upper left corner of the screen. \n \n

Remove Time: \n \n

To remove a recorded time, start by going to the main menu. The main menu is located
by selecting the button in the upper left corner of the home screen.
Once you open the menu, select the "add/remove time" option from the list. Once selected,
a new page will open. Here you can select a time from the list of recorded
times for the day. Once you have selected a time you wish to delete,
select the REMOVE PROJECT button to remove the selected time from the database.
To return to the home screen, select the arrow in the upper left corner of the screen. \n \n

Add Time: \n \n

To add a time, start by going to the main menu. The main menu is located
by selecting the button in the upper left corner of the home screen.
Once you open the menu, select the "add/remove time" option from the list. Once selected,
a new page will open. Here you can select a time from the list of recorded
times for the day. Once you have selected a time you wish to delete,
select the REMOVE PROJECT button to remove the selected time from the database.
To return to the home screen, select the arrow in the upper left corner of the screen. \n \n

Overview of Time Spent Today: \n \n

To get an overview of how much time you spent today on your projects,
start by going to the main menu. The main menu is located
by selecting the button in the upper left corner of the home screen.
Once you open the menu, select the "overview" option from the list. Once selected,
a new page will open. Here you will get a pie chart of how much time you spent on
each project, relative to each other. \n \n</string>
</resources>
