<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.calvin.cs262.teama.timetracker.addProject"
    tools:showIn="@layout/activity_add_project">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <EditText
            android:id="@+id/newProjText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/new_proj_text_field"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/newProjButton"
            android:layout_width="50pt"
            android:layout_height="wrap_content"
            android:text="@string/add_project_button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <Spinner
            android:id="@+id/removeProjSpin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/removeProjButton"
            android:layout_width="100pt"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/remove_project_button" />

    </LinearLayout>

</LinearLayout>
